# gnss-ins-sim

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  demo.py  demo_aceinna_ins.py  demo_aceinna_vg.py  demo_allan.py  demo_dmu380_sim.py  demo_dmu380_vg.py  demo_free_integration.py  demo_free_integration_long_time.py  demo_free_integration_openimu.py  demo_gen_data_from_files.py  demo_inclinometer_mahony.py  demo_ins_loose.py  demo_kml_gen.py  demo_mag_cal.py  demo_multiple_algorithms.py  demo_no_algo.py  demo_ui_ans.py  setup.py  test_ins_sim.py  test_path_gen.py
algorithm/: allan_analysis.py  free_integration.py  inclinometer_kf.py  inclinometer_mahony.py
allan/: allan.py
attitude/: attitude.py
buffer/: buffer.py
demo_algorithms/: aceinna_ins.py  aceinna_vg.py  allan_analysis.py  dmu380_sim.py  free_integration.py  free_integration_odo.py  inclinometer_acc.py  inclinometer_mahony.py  ins_loose.py  mag_calibrate.py
demo_algorithms/mag_calibrate_src/: CMakeLists.txt
demo_algorithms/mag_calibrate_src/libmymath/: mymath.h
demo_algorithms/mag_calibrate_src/src/: MagCalibration.c  MagCalibration.h
demo_motion_def_files/: motion_def-0to100.csv  motion_def-0to100_sample_by_sample.csv  motion_def-100to0.csv  motion_def-3d.csv  motion_def-90deg_turn.csv  motion_def-Allan.csv  motion_def-Holland_tunnel.csv  motion_def-ins.csv  motion_def-long_drive.csv  motion_def-static.csv  motion_def.csv  motion_def_mag_cal.csv
filter/: butterworth.py  filter.py
fusion/: mahony.py
geoparams/: WMM.COF  geoparams.py
google_earth/: google_earth.py  (+1 more)
(+64 files in other folders)
